# MegaAntiCheat

./: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.json  turbo.json
.github/workflows/: local.yml
api/: dev.ts  package.json  tsconfig.json
api/src/: hook.ts  index.ts  logger.ts
api/src/models/: Player.ts  index.ts
api/src/routes/: index.ts  players.ts  ws.ts
apps/local/: package.json  tsconfig.json  tsup.config.ts
apps/local/src/: index.ts
apps/master/: package.json
apps/master/src/: index.ts
apps/www/: .env.example  .eslintrc.cjs  README.md  docker-compose.yml  package.json  tsconfig.json
apps/www/prisma/: schema.prisma
local/: index.js  package-lock.json  package.json  tsconfig.json
local/src/: index.ts  logWatcher.ts  main.ts  player.ts  regexes.ts  server.ts
local/src/client/: commandManager.ts  logWatcher.ts  main.ts  player.ts  regexes.ts  server.ts
local/src/common/: logging.ts  steamID.ts
local/src/discord/: APIrequest.ts  client.ts  guards.ts  helpers.ts  main.ts  transformers.ts
master/: package-lock.json  package.json  tsconfig.json
master/demo-parser/: Cargo.toml  LICENSE_MIT
master/demo-parser/src/: lib.rs
master/src/: index.ts
schema/: .env.example  package.json
schema/prisma/: schema.prisma
ui/: .eslintrc.cjs  README.md  docker-compose.yml  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ui/src/: app.html
ui/src/assets/: quotes.json
(+55 files in other folders)
